--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>DocGit</title>
 </head>
 <body>
-    
+    <header>
+        <h1>El meu títol des de la terminal de Visual Studio Code</h1>
+    </header>
 </body>
 </html>
