--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <header>
         <h1>El meu títol des de la terminal de Visual Studio Code</h1>
+        <h2>Provant Git push de nou</h2>
     </header>
 </body>
 </html>
