--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <h1>El meu títol des de la terminal de Visual Studio Code</h1>
         <h2>Provant Git push de nou</h2>
-        <h3>Canvi en la capçalera des de una nova branca</h3>
+        <h3>Canvi en la capçalera des d'una nova branca</h3>
     </header>
 </body>
 </html>
