--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <h2>Provant Git push de nou</h2>
         <h3>Canvi en la capçalera des d'una nova branca</h3>
     </header>
+    <footer>Peu creat</footer>
 </body>
 </html>
